<resources>
    <string name="app_name">WTraining</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_label">Login</string>
    <string name="login_user">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_login">Log In</string>
    <string name="login_signup">Sign up</string>
    <string name="login_bottom">By joining you agree to our Terms &amp; Conditions</string>
    <string name="login_emptyuser">Username cannot be empty</string>
    <string name="login_emptypass">Password cannot be empty</string>
    <string name="login_invaliduser">Invalid username</string>
    <string name="login_wronguser">Wrong username</string>
    <string name="login_wrongpass">Wrong password</string>

    <string name="signup_label">Signup</string>
    <string name="signup_user">Email</string>
    <string name="signup_pass">Password</string>
    <string name="signup_cpass">Confirm password</string>
    <string name="signup_emptyuser">Email cannot be empty</string>
    <string name="signup_emptypass">Password cannot be empty</string>
    <string name="signup_cpassnotmatch">Passwords not match</string>
    <string name="signup_userexists">That email exists</string>
</resources>
